# mvsr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  fetch-dependencies.sh  flake.nix  heap.hpp  heap_test.cpp  index.html  list.hpp  list_test.cpp  plot.py  plot_real.py  plotd.py  polyreg.cpp  polyreg.py  polyreg_test.cpp  release.md  requirements.txt
.github/workflows/: ci.yaml  docs.yaml  lib.yaml  python.yaml  release.yaml
data/: convert_data.py  task_948_bwa__DA45_CPU.txt  task_948_bwa__DA45_MEM.txt
docs/: .envrc  .gitignore  README.md  pyproject.toml  shell.nix
docs/src/: conf.py  fixes.py  generate.py
docs/src/lang/python/: api-reference.rst
docs/src/static/: theme-overrides.css
eval/: DP_CONT_S01_2025-05-26T16:33:17.csv  DP_CONT_S1_2025-05-26T20:14:08.csv  DP_CSV_NONE_2025-05-27T02:36:34.csv  M1K_CONT_S01_2025-05-26T02:25:26.csv  M1K_CONT_S1_2025-05-26T03:21:46.csv  M1K_CSV_NONE_2025-05-27T22:13:11.csv  M2K_CONT_S01_2025-05-26T04:27:23.csv  M2K_CONT_S1_2025-05-26T07:06:06.csv  M2K_CSV_NONE_2025-05-27T22:13:19.csv  M4K_CONT_S01_2025-05-26T08:39:00.csv  M4K_CONT_S1_2025-05-26T12:31:00.csv  M4K_CSV_NONE_2025-05-27T22:13:27.csv  PREG_CONT_S01_2025-05-26T01:31:37.csv  PREG_CONT_S1_2025-05-26T01:58:32.csv  PREG_CSV_NONE_2025-05-27T22:13:36.csv  cpu.txt  os.txt  out_dp.txt  out_fsm.txt  out_preg.txt
evald/n4096/: DPSM_CONT_S01_2025-04-08T07:12:45.csv  DPSM_CONT_S1_2025-04-08T07:12:51.csv  DP_CONT_S01_2025-04-05T19:51:26.csv  DP_CONT_S1_2025-04-05T19:51:26.csv  M1K_CONT_S01_2025-04-05T21:31:42.csv  M1K_CONT_S1_2025-04-05T21:31:51.csv  M2K_CONT_S01_2025-04-05T22:32:24.csv  M2K_CONT_S1_2025-04-05T22:33:32.csv  PREGSM_CONT_S01_2025-04-06T09:26:57.csv  PREGSM_CONT_S1_2025-04-06T09:23:38.csv  PREG_CONT_S01_2025-04-06T09:31:02.csv  PREG_CONT_S1_2025-04-06T09:23:40.csv
evald/n64d/: DPSM_CONT_S01_2025-04-08T07:12:58.csv  DPSM_CONT_S1_2025-04-08T07:13:04.csv  DP_CONT_S01_2025-04-05T20:16:00.csv  DP_CONT_S1_2025-04-05T20:15:59.csv  M1K_CONT_S01_2025-04-06T08:38:24.csv  M1K_CONT_S1_2025-04-06T08:38:35.csv  M2K_CONT_S01_2025-04-06T08:38:40.csv  M2K_CONT_S1_2025-04-06T08:38:45.csv  PREGSM_CONT_S01_2025-04-06T10:34:22.csv  PREGSM_CONT_S1_2025-04-06T10:25:01.csv  PREG_CONT_S01_2025-04-06T10:49:30.csv  PREG_CONT_S1_2025-04-06T10:25:01.csv
evald/n8192/: DPSM_CONT_S01_2025-04-08T07:12:19.csv  DPSM_CONT_S1_2025-04-08T07:12:22.csv  DP_CONT_S01_2025-04-05T19:51:24.csv  DP_CONT_S1_2025-04-05T19:51:24.csv  M1K_CONT_S01_2025-04-06T00:20:18.csv  M1K_CONT_S1_2025-04-06T00:20:17.csv  M2K_CONT_S01_2025-04-06T04:13:39.csv  M2K_CONT_S1_2025-04-06T04:11:28.csv  PREGSM_CONT_S01_2025-04-06T10:01:29.csv  PREGSM_CONT_S1_2025-04-06T09:55:15.csv  PREG_CONT_S01_2025-04-06T10:09:44.csv  PREG_CONT_S1_2025-04-06T09:55:16.csv
lang/c/: README.md
lang/c++/: README.md
lang/cpp/: README.md
lang/python/: .envrc  .gitignore  README.md  hatch_build.py  libmvsr.py  mvsr.py  pyproject.toml  shell.nix  test.py
lang/python/examples/: plot.py
lang/python/mvsr/: __init__.py  libmvsr.py  mvsr.py
lang/python/test/: noxfile.py  test.py  test_mvsr.py
latest/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
latest/.doctrees/: environment.pickle  index.doctree
latest/.doctrees/lang/c/: index.doctree
latest/.doctrees/lang/cpp/: api-reference.doctree  index.doctree
latest/.doctrees/lang/python/: api-reference.doctree  index.doctree
latest/_sources/: index.md.txt
latest/_sources/lang/c/: index.md.txt
latest/_sources/lang/cpp/: index.md.txt
latest/_sources/lang/python/: index.md.txt
latest/_static/: theme-overrides.css
latest/lang/c/: api-reference.html  index.html
latest/lang/cpp/: api-reference.html  index.html
latest/lang/python/: api-reference.html  index.html
mvsr/: .clang-format  .envrc  CMakeLists.txt  package.nix  shell.nix
mvsr/inc/: mvsr.h
mvsr/src/: mvsr.cpp  mvsr.hpp  mvsr_heap.hpp  mvsr_list.hpp  mvsr_mat.hpp
mvsr/test/: linear.cpp
related_work/: README.md  acharya_sm_disable.patch  acharya_sm_repair.patch
stable/: genindex.html  index.html  objects.inv  searchindex.js
stable/.doctrees/: environment.pickle  index.doctree
stable/.doctrees/lang/c/: api-reference.doctree  index.doctree
stable/.doctrees/lang/cpp/: index.doctree
stable/.doctrees/lang/python/: api-reference.doctree  index.doctree
stable/_sources/: index.md.txt
stable/_sources/lang/c/: api-reference.rst.txt  index.md.txt
stable/_sources/lang/cpp/: api-reference.rst.txt
stable/_sources/lang/python/: index.md.txt
stable/_static/: theme-overrides.css
stable/lang/c/: api-reference.html  index.html
stable/lang/cpp/: api-reference.html  index.html
stable/lang/python/: api-reference.html  index.html
