[project]
name = "mvsr-docs"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "mvsr[matplotlib]",
    "sphinx",
    "furo",
    "myst-parser",
    "docutils",
    "sphinxcontrib-mermaid",
    "sphinx-autodoc-typehints",
]

[tool.uv.sources]
mvsr = { path = "../lang/python", editable = true }

[dependency-groups]
dev = ["ruff", "sphinx-autobuild"]

[tool.ruff]
line-length = 100
