[project]
name = "mvsr"
version = "0.1"
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["numpy>=1.21"]

[dependency-groups]
dev = ["hatchling", "auditwheel", "ruff", "pytest", "pytest-cov", "nox", "matplotlib"]

[build-system]
requires = ["hatchling", "auditwheel"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["mvsr"]
[tool.hatch.build.targets.sdist.force-include]
"../../mvsr/CMakeLists.txt" = "libmvsr/CMakeLists.txt"
"../../mvsr/src" = "libmvsr/src"
[tool.hatch.build.targets.wheel]
artifacts = ["*/lib/*.so", "*/lib/*.dylib", "*/lib/*.dll"]
[tool.hatch.build.targets.wheel.hooks.custom]

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "strict"
reportMissingParameterType = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportPrivateUsage = false
reportMissingTypeStubs = false

[tool.coverage.report]
exclude_also = ["InternalError"]

[tool.pytest.ini_options]
addopts = "--cov mvsr --cov-fail-under 99"
